--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^5.8.55",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-agile": "^1.1.3",
+    "vue-owl-carousel": "^2.0.3",
+    "vue-router": "^3.4.9",
+    "vuetify": "^2.3.17"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
